#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([lxkb-config],[0.9.1],[azubieta@estudiantes.uci.cu])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([src/config.h])

# adding internationalization support
AM_GNU_GETTEXT_VERSION([0.18.1])
AM_GNU_GETTEXT([external])


# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.
AC_PATH_X
AC_CHECK_HEADERS([libintl.h limits.h locale.h stdlib.h string.h unistd.h])

# Checks for build dependecies

PKG_CHECK_MODULES(GTK2, [gtk+-2.0 >= 2.0.0])
AC_SUBST(GTK2_CFLAGS)
AC_SUBST(GTK2_LIBS)

PKG_CHECK_MODULES(GLIB2, [glib-2.0 >= 2.0])
AC_SUBST(GLIB2_CFLAGS)
AC_SUBST(GLIB2_LIBS)

PKG_CHECK_MODULES(LIBXML2, [libxml-2.0 >= 2.0])
AC_SUBST(LIBXML2_CFLAGS)
AC_SUBST(LIBXML2_LIBS)

# Checks for run time dependecies
# lxkb-config also depends of "setxkbmap"
build_pkg_modules="xkeyboard-config"
PKG_CHECK_MODULES(XKEYBOARD_CONFIG, [$build_pkg_modules])

# getting xkb rules path
xkb_base_dir=$( pkg-config --variable="xkb_base" xkeyboard-config )
AC_DEFINE_UNQUOTED([XKB_RULES_PATH], 
    ["${xkb_base_dir}/rules/base.xml" ]  , 
    ["Definition of the xkb rules path."])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([memset setlocale strdup])

AC_CONFIG_FILES([Makefile po/Makefile.in
                 src/Makefile data/lxkb-config.desktop])
AC_OUTPUT
